--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@astrojs/check": "^0.3.4",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@tanstack/react-query": "^5.17.9",
     "astro": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.17.7"
   }
 }
